PP-Platform-Servers-Master/PP-Platform-Spring-API-GW-DevOps/k8s/k8s-pp-platform-server-spring-apigw-loadbal-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: pp-platform-server-spring-apigw-loadbalancer-dev
  labels:
    app: pp-platform-server-spring-apigw
    department: platform-server-spring-apigw
spec:
  type: LoadBalancer
  selector:
    app: pp-platform-server-spring-apigw
    department: platform-server-spring-apigw
  ports:
  - protocol: TCP
    port: 8102
    targetPort: 8002
  clusterIP: 10.96.0.82
status:
  loadBalancer:
    ingress:
      - ip: 192.0.2.182
