PP-Platform-Servers-Master/PP-Platform-Spring-API-GW-DevOps/k8s/k8s-pp-platform-server-spring-apigw-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: pp-platform-server-spring-apigw-nodeport
  labels:
    app: pp-platform-server-spring-apigw
    department: platform-server-spring-apigw
spec:
  type: NodePort
  selector:
    app: pp-platform-server-spring-apigw
    department: platform-server-spring-apigw
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8002
    nodePort: 30082
