PP-Platform-Servers-Master/PP-Platform-Spring-API-GW-DevOps/k8s/k8s-pp-platform-server-spring-apigw-service.yml
apiVersion: v1
kind: Service
metadata:
  name: platform-server-spring-apigw
  labels:
    app: platform-server-spring-apigw
    department: platform-server-spring-apigw
spec:
  type: ClusterIP
  selector:
    app: platform-server-spring-apigw
    department: platform-server-spring-apigw
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8002
