PP-Platform-Servers-Master/PP-Platform-Spring-API-GW-DevOps/k8s/k8s-pp-platform-server-spring-apigw-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pp-platform-server-spring-apigw
spec:
  defaultBackend:
      service:
        name: pp-platform-server-spring-apigw
        port: 
          number: 8002
